k8s/immich/04-immich-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-server-deployment
  namespace: immich
spec:
  replicas: 1
  selector:
    matchLabels:
      app: immich-server
  template:
    metadata:
      labels:
        app: immich-server
    spec:
      securityContext:
        runAsUser: 1302
        runAsGroup: 1302
        fsGroup: 1302
      containers:
        - name: immich-server
          image: ghcr.io/immich-app/immich-server:v2.0.1
          ports:
            - containerPort: 2283
          volumeMounts:
            - name: immich-media-storage
              mountPath: /usr/src/app/upload # This is where Immich will store media
      volumes:
        - name: immich-media-storage
          nfs:
            server: 192.168.0.202
            path: /mnt/data/contents/private/immich
---
apiVersion: v1
kind: Service
metadata:
  name: immich-server-service
  namespace: immich
spec:
  selector:
    app: immich-server
  ports:
    - protocol: TCP
      port: 2283
      targetPort: 2283
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: immich-server-ingressroute
  namespace: immich
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`immich.localdev`)
      kind: Rule
      services:
        - name: immich-server-service
          port: 2283
  tls:
    secretName: immich-localhost-tls
