k8s/immich/05-http-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: immich-http-ingress # Renamed for clarity
  namespace: immich
spec:
  entryPoints:
    - web # Listens on the insecure 'web' entrypoint
  routes:
    - match: Host(`immich.localdev`) || Host(`immich.strawslabs.com`)
      kind: Rule
      services:
        - name: immich-server-service
          port: 2283
